k8s/prometheus/ingress-routes/grafana-operated.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-operated
  labels:
    operated-prometheus: 'true'

spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      name: web
      port: 3000
      targetPort: grafana
