k8s/prometheus/ingress-routes/prometheus-ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.localhost`)
      kind: Rule
      services:
        - name: prometheus-operated
          port: 9090
      middlewares:
        - name: admin-auth
  tls:
    secretName: traefik-tls-secret

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress-route-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.localhost`)
      kind: Rule
      services:
        - name: prometheus-operated
          port: 9090
      middlewares:
        - name: https
        - name: admin-auth
